<resources>
    <string name="app_name">AgriScan</string>
    <string name="greeting_message">%1$s, \n %2$s!</string>
    <string name="sign_in_to_your_account">Sign in ke \Akun Anda</string>
    <string name="enter_your_email_and_password_to_log_in">Masukkan email dan kata sandi untuk masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Tidak punya akun?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Sudah punya akun?</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_icon">Plant Icon</string>
    <string name="scan">Scan</string>
    <string name="menu_name">Menu Name</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="menu">Menu</string>
    <string name="prediksi">Prediksi %1$s</string>
    <string name="image_placeholder">Image placeholder</string>
    <string name="prediksi_kondisi">Prediksi kondisi :</string>
    <string name="prediksi_kondisi_placeholder">Prediksi kondisi akan tampil disini</string>
    <string name="confidence">Confidence :</string>
    <string name="confidence_placeholder">Nilai confidence akan tampil disini</string>
    <string name="simpan_history">Simpan history</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="logo_agriscan">Logo AgriScan</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="no_result">Tidak ada hasil untuk gambar ini</string>
    <string name="full_image">Full Image</string>
    <string name="media">Media</string>
    <string name="tanggal">Tanggal</string>
    <string name="history_image">History Image</string>
    <string name="delete">Hapus</string>
    <string name="no_history_available">Belum ada history yang disimpan..</string>
    <string name="beli_obat">Beli Obat</string>
    <string name="example_disease_image">Example Disease Image</string>
</resources>