<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prediksi_kondisi"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confidence"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:layout_marginTop="4dp" />

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/history_image"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.cardview.widget.CardView>